tests/errors/cmplx_02.f90
program cmplx_02
    print*, cmplx((real(1, kind=4), 0.00000000), kind=8)
end